optimized RouteAnnotator for loading locally and fixed dockerfile - fully automatized

--- a/AMLD-2020/Dockerfile
+++ b/AMLD-2020/Dockerfile
@@ -7,22 +7,25 @@ WORKDIR /amld_geo
 
 COPY requirements.txt /amld_geo/.
 
-RUN pip install --upgrade pip && pip install -r requirements.txt
+RUN pip install --upgrade pip && pip install  -r requirements.txt
 
 COPY AMLD_2020.ipynb /amld_geo/AMLD_2020.ipynb
 
-COPY data/taxi_fare_sample_100000.csv /amld_geo/data/taxi_fare_sample_100000.csv
-COPY data/temp_routes_test.pickle /amld_geo/data/temp_routes_test.pickle
-COPY data/temp_routes_train.pickle /amld_geo/data/temp_routes_train.pickle
+COPY data/taxi_fare_sample_100000.csv \
+     data/temp_routes_test.pickle \
+     data/temp_routes_test.pickle \
+     data/temp_routes_train.pickle \
+     data/new_york_city.osm.pbf \
+     data/AMLD_lookups.pickle /amld_geo/data/
 
 COPY images/ /amld_geo/images
 
-COPY utils/conversor.py /amld_geo/utils/conversor.py
-COPY utils/plot_geometry.py /amld_geo/utils/plot_geometry.py
-COPY utils/OSRMFramework.py /amld_geo/utils/OSRMFramework.py
-COPY utils/RouteAnnotator.py /amld_geo/utils/RouteAnnotator.py
+COPY utils/conversor.py \
+     utils/plot_geometry.py \
+     utils/OSRMFramework.py \
+     utils/RouteAnnotator.py /amld_geo/utils/
 
-COPY router/new_york_city.osm.pbf /amld_geo/router/new_york_city.osm.pbf
+ENV IS_DOCKER Yes
 
 EXPOSE 8888
 
